Through some testing, I discovered that the qp_rhs_H_mf should actually take in ALL of the states, not just the ones that pertain to the agent.  So, this means that the dimensions of the inputs should be equal to the total number of states in the entire system, rather than equal to just the dimension of the number of states pertaining to that agent.
Outside of each qp_rhs_H_mf method, (but inside of the qp_rhs method)
we will construct the vector combining quenched and non-quenched states
to make a vector with dimension equal to the number of states in the
entire system.  Then, this vector will be passed into all of the subsequent
H_mf methods.

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -373,6 +373,8 @@
     "        # each q_lD is a 1-D array of size 1 by state_dim array\n",
     "        return 1\n",
     "\n",
+    "    qp_rhs(self, t, qp_vec, qp_vec_quenched=[0.001, 0.5] , quenched_state_indices=[3,4])\n",
+    "    \n",
     "    def qp_rhs(self, t, qp_vec, **kwargs):\n",
     "        # u_s is constant (because of causality, remember?)\n",
     "        # another keyword argument inside of **kwargs is the quenched values for this agent. Since we know which \n",
