helper function for getting values from blackboard needed to be changed. I changed it so that it will take an instance of class sliding_window, and return completed q_mf, u_mf, and q_mf_dot vectors

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -174,13 +174,21 @@
     "        # u_s is constant (because of causality, remember?)\n",
     "        u_s = kwargs['u_0']\n",
     "        state_dim = kwargs['state_dim']\n",
+    "        qp_vec_quenched = kwargs['qp_vec_quenched']\n",
+    "        qp_vec_state_indices = kwargs['qp_vec_state_indices']\n",
+    "        \n",
     "        # TODO:  get a kwargs working for lambda_l\n",
     "        lambda_l = 0 # kwargs['lambda_l']\n",
     "        q_s = qp_vec[:state_dim]\n",
     "        p_l = qp_vec[state_dim:2*state_dim]\n",
     "        p_mf = qp_vec[2*state_dim:]\n",
     "\n",
-    "        qp_rhs_H_mf = self.qp_rhs_H_mf(q_s, p_mf, u_s)\n",
+    "        # complement with values in kwargs (from blackboard) to make a complete _mf vector\n",
+    "        q_mf = \n",
+    "        p_mf = \n",
+    "        u_mf = \n",
+    "        \n",
+    "        qp_rhs_H_mf = self.qp_rhs_H_mf(q_mf, p_mf, u_mf)\n",
     "        p_rhs_H_mf = qp_rhs_H_mf[:state_dim]\n",
     "        q_rhs_H_mf = qp_rhs_H_mf[state_dim:]\n",
     "        \n",
@@ -225,14 +233,14 @@
     "    def H_MF_u_2(self, q_mf, p_mf):\n",
     "        return q_mf[1]\n",
     "        \n",
-    "    def qp_rhs_H_mf(self, q_s, p_mf, u_s):\n",
+    "    def qp_rhs_H_mf(self, q_mf, p_mf, u_s):\n",
     "        # remember that we want to propagate as much as possible together in the same rhs function for numerical purposes\n",
     "        # remember that q_rhs here is w.r.t p_mf but p_rhs here is w.r.t q_s\n",
-    "        q_H_mf_dot = self.p_rhs_H_mf(q_s, p_mf, u_s)\n",
-    "        p_H_mf_dot = self.q_rhs_H_mf(q_s, p_mf, u_s)\n",
+    "        q_H_mf_dot = self.p_rhs_H_mf(q_mf, p_mf, u_s)\n",
+    "        p_H_mf_dot = self.q_rhs_H_mf(q_mf, p_mf, u_s)\n",
     "        return np.concatenate([q_H_mf_dot, p_H_mf_dot])\n",
     "    \n",
-    "    def q_rhs_H_mf(self, q_s, p_mf, u_s):\n",
+    "    def q_rhs_H_mf(self, q_mf, p_mf, u_s):\n",
     "        return self.q_rhs_H_mf_nou(q_s, p_mf) + sum([self.q_rhs_H_mf_u(q_s, p_mf)*u_i for u_i in u_s])\n",
     "        \n",
     "    def q_rhs_H_mf_u(self, q_s, p_mf):\n",
@@ -552,14 +560,15 @@
     "    \n",
     "    def __init__(self):\n",
     "        '''\n",
-    "#               values: list of integers state_indices state_indices\n",
+    "        values: list of integers state_indices state_indices\n",
     "        q_p_u_dict is a dictionary which maps 'q', 'p', 'u', to a dictionary of index-value pairs: local values for q, p, and u for this agent.  \n",
     "                        blackboard holds all of the most recent local values, e.g.\n",
     "                        {'q_s': {'1':3, '2':0}, 'p_mf': {'1':3, '2': 2}, 'u': {'1': 0}}\n",
     "                        It doesn't care which agent updated them most recently.  It only needs to know which values to update.\n",
     "        q_p_u_dict initially will be filled.\n",
     "        '''\n",
-    "        self.q_p_u_dict={'q_s':{}, 'p_l':{}, 'p_mf':{}, 'u_s':{}, 'q_s_dot':{}}\n",
+    "        ## TODO:  _s should really be called _mf because it contains all of the states/controls.\n",
+    "        self.q_p_u_dict = {'q_s':{}, 'p_l':{}, 'p_mf':{}, 'u_s':{}, 'q_s_dot':{}}\n",
     "        self.agents=[]\n",
     "        \n",
     "    def update_q_p_u_dict(self, agent):\n",
@@ -598,6 +607,62 @@
     "\n",
     "- Add agents to blackboard and meanfield\n",
     "- Run synchronizer to visit the agents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "t=np.array([1,3])\n",
+    "vals=[0,0.5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1]),)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(t==3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vals[np.where(t==3)[0][0]]"
    ]
   },
   {
