Incorporated the keyword arguments into qp_rhs

--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -174,19 +174,15 @@
     "        # u_s is constant (because of causality, remember?)\n",
     "        u_s = kwargs['u_0']\n",
     "        state_dim = kwargs['state_dim']\n",
-    "        qp_vec_quenched = kwargs['qp_vec_quenched']\n",
-    "        qp_vec_state_indices = kwargs['qp_vec_state_indices']\n",
+    "        q_mf = kwargs['q_mf']\n",
+    "        q_mf_dot = kwargs['q_mf_dot']\n",
+    "        u_mf = kwargs['u_mf']\n",
     "        \n",
     "        # TODO:  get a kwargs working for lambda_l\n",
     "        lambda_l = 0 # kwargs['lambda_l']\n",
     "        q_s = qp_vec[:state_dim]\n",
     "        p_l = qp_vec[state_dim:2*state_dim]\n",
     "        p_mf = qp_vec[2*state_dim:]\n",
-    "\n",
-    "        # complement with values in kwargs (from blackboard) to make a complete _mf vector\n",
-    "        q_mf = \n",
-    "        p_mf = \n",
-    "        u_mf = \n",
     "        \n",
     "        qp_rhs_H_mf = self.qp_rhs_H_mf(q_mf, p_mf, u_mf)\n",
     "        p_rhs_H_mf = qp_rhs_H_mf[:state_dim]\n",
@@ -390,7 +386,7 @@
     "        u_s = kwargs['u_0']\n",
     "        state_dim = kwargs['state_dim']\n",
     "        # TODO:  get a kwargs working for lambda_l\n",
-    "        lambda_l = 0 #kwargs['lambda_l']\n",
+    "        lambda_l = 0 # kwargs['lambda_l']\n",
     "        q_s = qp_vec[:state_dim]\n",
     "        p_l = qp_vec[state_dim:2*state_dim]\n",
     "        p_mf = qp_vec[2*state_dim:]\n",
