Fixed some of the bugs in compute_p_mf_p_l

--- a/Mean_Field_backup.ipynb
+++ b/Mean_Field_backup.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -502,15 +502,16 @@
     "\n",
     "    def L_mf_q_dot(self, q_mf, q_mf_dot, u_mf):\n",
     "        # q_mf_dot, q_mf (inputs) here will be vectors of ALL of the states\n",
-    "        # q_mf_dot u_mf is a vector of ALL of the controls\n",
+    "        # u_mf is a vector of ALL of the controls\n",
     "        L_mf_total_q_dot = 0\n",
     "        for agent in self.agents:\n",
     "            # Evaluate L_q_dot for each of the agents\n",
     "            # Remember L_l_q_dot only takes in the local variables.  So, need to know the indices in q_mf which correspond to \n",
     "            #...the states pertaining to this agent\n",
-    "#             q_l = # subset of q_mf\n",
-    "#             q_l_dot = # subset of q_mf_dot\n",
-    "#             u_s = # subset of u_mf\n",
+    "            \n",
+    "            q_l = q_mf[[ix - 1 for ix in agent.state_indices]] # subset of q_mf\n",
+    "            q_l_dot = q_mf_dot[[ix - 1 for ix in agent.state_indices]] # subset of q_mf_dot\n",
+    "            u_s = u_mf[[ix - 1 for ix in agent.control_indices]] # subset of u_mf\n",
     "            L_l_q_dot = agent.L_l_q_dot(q_l, q_l_dot, u_s)\n",
     "            L_mf_total_q_dot = L_mf_total_q_dot + L_l_q_dot\n",
     "            \n",
@@ -531,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -549,7 +550,7 @@
        "'\\none option is for each of the sliding_window_instances to have an attribute called \"synchronizer\", which holds the synchronizer\\nobject that runs all of this.  \\nThen, \\n'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -632,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -647,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -658,7 +659,7 @@
        "[1, 2]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -681,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -692,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -707,7 +708,7 @@
        " 'u_s': {'1': 0}}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -732,30 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'stop' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-28-86c4545cc7bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mstop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'stop' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "print stop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -789,18 +767,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'stop' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-86c4545cc7bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mstop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'stop' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "myAgent"
+    "print stop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
